--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   }
 
   body {
-    background-color: #7cc6fe;
+    background-color: #44bd32;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -85,6 +85,10 @@ body {
     align-items: center;
     border: 5px solid #234668;
     cursor: pointer;
+  }
+  .new-game{
+    background:#0097e6;
+    text-align: center;
   }
 
   .correct {
